# rust_log_app

./: Readme.org
client/: Cargo.toml  configuration.yaml
client/src/: cmd.rs  main.rs
client/src/utils/: configuration.rs
server/: Cargo.toml  configuration.yaml  test.http
server/src/: lib.rs  main.rs  startup.rs
server/src/middleware/: after_request.rs  before_request.rs  mod.rs
server/src/routes/: health_check.rs
server/src/stats/: client.rs  server.rs
server/src/utils/: conifg.rs  errors.rs  file.rs  mod.rs
