[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.2.1", features = ["openssl"] }
config = "0.11"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9"
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.6.2"
anyhow = "1.0.70"
rand = "0.8.5"
futures-util = "0.3.28"
thiserror = "1.0.40"
